# Auditext

./: pyproject.toml
app/: main.py
app/controllers/: audio_player.py  audio_procesing.py  audio_processing.py  file_operations.py  trancriber.py
app/logs/: error_log.txt
app/ui/: form_main.py  form_main.ui  main.ui
