[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jonathan-escritorio <joni92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.4.0"
sounddevice = "^0.4.6"  # Para manejo de audio
numpy = "^1.24.0"       # Para procesamiento de señales
wave = "^0.0.2"         # Para manejo de archivos WAV
pyqt6-tools = "^6.4.2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
